master: fix flag position on mobile

--- a/src/components/Recent/styles.scss
+++ b/src/components/Recent/styles.scss
@@ -17,7 +17,7 @@
     transition: max-height 0.25s;
 
     &--open {
-      max-height: 525px;
+      max-height: 650px;
     }
   }
 
